fix product height on small size

--- a/assets/css/product.scss
+++ b/assets/css/product.scss
@@ -302,7 +302,7 @@ body {
                         outline: none;
                         img {
                             max-width: 100%;
-                            max-height: 100%;
+                            max-height: 50%;
                         }
                     }
                 }
